# pdm-rename

./: .gitignore  .pre-commit-config.yaml  README.md  plugin.py  pyproject.toml
.github/workflows/: release.yaml
